package vn.edu.fu.newsmanagement;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class NewsManagementApplication {

	public static void main(String[] args) {
		SpringApplication.run(NewsManagementApplication.class, args);
	}

}
